2007-01-07  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* added CloudscapeProfileProvider.cs